rns-lang/tests/snapshots/lexer-directives-two_dots.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
..
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/two_dots.ja:1:1 ]
   │
 1 │ ..
   │ ─┬  
   │  ╰── Unknown directive '..'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
